--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,5 @@ in.in
 debug.in
 out.out
 sop/dict.txt
-numerical_methods/interval_2.h
+numerical_analysis/ext/libext.so
+numerical_analysis/interval_2.h
