--- a/numerical_analysis/Makefile
+++ b/numerical_analysis/Makefile
@@ -15,7 +15,7 @@
 
 EXE = app/app
 IMGUI_DIR = imgui/
-SOURCES = main.cpp
+SOURCES = main.cpp interval.cpp
 SOURCES += $(IMGUI_DIR)/imgui.cpp $(IMGUI_DIR)/imgui_demo.cpp $(IMGUI_DIR)/imgui_draw.cpp $(IMGUI_DIR)/imgui_tables.cpp $(IMGUI_DIR)/imgui_widgets.cpp
 SOURCES += $(IMGUI_DIR)/backends/imgui_impl_glfw.cpp $(IMGUI_DIR)/backends/imgui_impl_opengl3.cpp
 OBJS = $(addprefix app/, $(addsuffix .o, $(basename $(notdir $(SOURCES)))))  # Modified line
