EAN finished app

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -94,6 +94,8 @@
         "typeinfo": "cpp",
         "valarray": "cpp",
         "variant": "cpp",
-        "text_encoding": "cpp"
+        "text_encoding": "cpp",
+        "generator": "cpp",
+        "print": "cpp"
     }
 }
