--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ sop/dict.txt
 numerical_analysis/app
 numerical_analysis/ext/libext.so
 numerical_analysis/interval_2.h
+numerical_analysis/doc/doc.aux
+numerical_analysis/doc/doc.log
