--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "numerical_analysis/imgui"]
 	path = numerical_analysis/imgui
 	url = https://github.com/ocornut/imgui.git
+[submodule "s3_OK"]
+	path = s3_OK
+	url = https://github.com/MagisterLatka/TSP
